--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
     "expo-media-library": "~14.1.0",
-    "expo-camera": "~12.2.0"
+    "expo-camera": "~12.2.0",
+    "expo-permissions": "~13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
