Rename Update.js to PhoneCamera.js, move components int src/components, remove Camera.js, begin navigation work.

--- a/app.json
+++ b/app.json
@@ -18,7 +18,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist":{
+        "NSCameraUsageDescription": "This app needs access to your camera to scan QR codes."
+      }
     },
     "android": {
       "adaptiveIcon": {
