--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
     "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-cli": "^6.3.0",
+    "expo-media-library": "~14.1.0",
+    "expo-permissions": "~13.2.0",
+    "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
@@ -27,9 +32,8 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
-    "expo-media-library": "~14.1.0",
-    "expo-camera": "~12.2.0",
-    "expo-permissions": "~13.2.0"
+    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
