--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
     "expo-cli": "^6.3.0",
+    "expo-image-picker": "~13.1.1",
     "expo-media-library": "~14.1.0",
     "expo-permissions": "~13.2.0",
     "expo-sharing": "~10.2.0",
@@ -41,8 +42,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-image-picker": "~13.1.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
