--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
 amplify/mock-data
+amplify/mock-api-resources
 amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
@@ -33,7 +34,6 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 .expo/
-.vscode
-amplify/
-
+.expo-shared/
+.vscode/
 #amplify-do-not-edit-end
