--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node_modules/
 #.DS_Store
 
 #amplify-do-not-edit-begin
+amplify/
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
