--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 #.DS_Store
 
 #amplify-do-not-edit-begin
+amplify/
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
@@ -35,5 +36,6 @@ amplifytools.xcconfig
 .expo/
 .vscode
 amplify/
+package-lock.json
 
 #amplify-do-not-edit-end
