--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
