--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     }
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "8.2.0",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/native": "^6.1.3",
@@ -25,29 +24,32 @@
     "amplify": "^0.0.11",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
-    "expo": "^45.0.0",
-    "expo-camera": "~12.2.0",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "expo": "^46.0.0",
+    "expo-camera": "~12.5.0",
     "expo-cli": "^6.3.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-media-library": "~14.1.0",
+    "expo-clipboard": "~3.1.0",
+    "expo-constants": "~13.2.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
     "expo-permissions": "~13.2.0",
-    "expo-sharing": "~10.2.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "expo-sharing": "~10.3.0",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^3.12.0",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
