created a basic micronutrient screen

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "amplify": "^0.0.11",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
+    "aws-sdk": "^2.1330.0",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "^46.0.0",
     "expo-camera": "~12.5.0",
@@ -37,6 +38,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-aws3": "^0.0.9",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.5.0",
