--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     }
   },
   "dependencies": {
+    "@mdi/js": "^7.1.96",
+    "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.0",
@@ -35,7 +37,7 @@
     "expo-permissions": "~13.2.0",
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.2",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-native": "0.69.6",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
