--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.0",
-    "@react-native-picker/picker": "^2.4.9",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/native": "^6.1.3",
@@ -40,7 +40,7 @@
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.2",
     "react": "^18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.9",
     "react-native-aws3": "^0.0.9",
     "react-native-circular-progress": "^1.3.8",
     "react-native-circular-progress-indicator": "^4.4.2",
